NCLua NEWS -- History of user-visible changes.                 -*-outline-*-

* Version 1.4, ???

  - Add nclua_resize and ncluaw_resize to libnclua

    We added two functions to resize the surface of the main canvas to
    libnclua.  The first, nclua_resize, is exposed by nclua.h; the second,
    ncluaw_resize, is exposed by ncluaw.h, the Lua-free interface.  We also
    updated the standalone interpreter to call nclua_resize and to send
    resize events to the running script whenever the window is resized.

  - Add the canvas._resize function.

    We added a new internal function, canvas._resize, which resizes the
    surface of a given canvas.

  - Add the canvas.attrFilter function.

    We added a new function, canvas.attrFilter, which selects the algorithm
    used when reading pixels from a source surface.

  - Fix bug in canvas.compose when custom crop parameters were given.

    Scale the source pattern and not the destination cairo context.

  - Make canvas.compose support the composition of a canvas onto itself.

    Now a canvas can be composed onto itself.

  - Add command-line options to NCLua interpreter.

    The interpreter now supports the following options:

       --fullscreen    enable full-screen mode,
       --help          print usage message,
       --scale         scale main canvas
       --size          set the initial window size,
       --version       print version string.

    You can also press F11 to toggle full-screen mode while the script is
    running.

* Version 1.3, February 22, 2015, Guilherme F. Lima

  - Add the HTTP event class and networking examples.

    We added a new event class, called http, for HTTP/HTTPS requests
    (cf. nclua/event/http.lua); this new class depends on Libsoup-2.4.

    We also added two examples of networking and two auxiliary libraries
    under examples/www.  The first example, examples/www/tcp-example.lua,
    makes a simple HTTP request and prints the response body on screen.