@@ -17,6 +17,9 @@
 # along with NCLua.  If not, see <http://www.gnu.org/licenses/>.
 
 include $(top_srcdir)/build-aux/Makefile.am.common
+include $(top_srcdir)/build-aux/Makefile.am.link
+
+AM_CFLAGS = $(WERROR_CFLAGS) $(WARN_CFLAGS)
 
 EXTRA_DIST = nclua.pc.in nclua.rc.in ncluaconf.h.in
 DISTCLEANFILES+= nclua.pc nclua.rc ncluaconf.h
@@ -75,8 +78,7 @@ uninstall-local: uninstall-def-file uninstall-ms-lib
 
 libnclua_la_DEPENDENCIES = $(nclua_def_depedency) $(nclua_win32_res)
 libnclua_la_CPPFLAGS = -DNCLUA_BUILDING
-libnclua_la_CFLAGS = $(WERROR_CFLAGS) $(WARN_CFLAGS)\
-  $(CFLAGS_VISIBILITY) $(LUA_CFLAGS)
+libnclua_la_CFLAGS = $(AM_CFLAGS) $(CFLAGS_VISIBILITY) $(LUA_CFLAGS)
 libnclua_la_LDFLAGS = $(LUA_LIBS) -version-info $(NCLUA_LIBTOOL_STRING)\
   $(export_symbols) -no-undefined $(nclua_win32_res_ldflag)
 
@@ -88,4 +90,20 @@ libnclua_la_SOURCES =\
   ncluaconf.h\
   ncluaw.c\
   ncluaw.h\
+  $(NULL)
+
+if BUILD_GSTNCLUA
+gstplugins_LTLIBRARIES = gstnclua.la
+else
+gstplugins_LTLIBRARIES =
+endif
+
+gstnclua_la_CFLAGS = $(AM_CFLAGS) $(LUA_CFLAGS) $(GLIB_CFLAGS)\
+  $(GSTREAMER_CFLAGS)
+gstnclua_la_LDFLAGS = $(AM_LDFLAGS) -shared -module -avoid-version\
+  -no-undefined $(LUA_LIBS) $(GLIB_LIBS) $(GSTREAMER_LIBS)
+gstnclua_la_LIBADD = $(top_builddir)/lib/libnclua.la
+gstnclua_la_DEPENDENCIES = $(lib_LTLIBRARIES)
+gstnclua_la_SOURCES =\
+  gstnclua.c\
   $(NULL)
